[gd_scene load_steps=9 format=2]

[ext_resource path="res://UIElements/WordEntry.tscn" type="PackedScene" id=1]
[ext_resource path="res://UIElements/InventoryTool.tscn" type="PackedScene" id=2]
[ext_resource path="res://UIElements/InventoryCrop.tscn" type="PackedScene" id=3]
[ext_resource path="res://UsedAssets/new_theme.tres" type="Theme" id=4]
[ext_resource path="res://UIElements/ActiveToolIcon.gd" type="Script" id=5]
[ext_resource path="res://UIElements/GameOverPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://UIElements/CustomerWindow.gd" type="Script" id=7]
[ext_resource path="res://MainUI.gd" type="Script" id=8]

[node name="MainUI" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1272.0
margin_bottom = 712.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 652.0
size_flags_vertical = 3

[node name="SeedPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/SeedPanel"]
margin_right = 128.0
margin_bottom = 128.0

[node name="InventoryCrop" parent="MarginContainer/VBoxContainer/HBoxContainer/SeedPanel/VBoxContainer" instance=ExtResource( 3 )]
mouse_filter = 2
crop_id = 1

[node name="InventoryCrop2" parent="MarginContainer/VBoxContainer/HBoxContainer/SeedPanel/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 132.0
margin_bottom = 260.0
mouse_filter = 2
crop_id = 2

[node name="InventoryCrop3" parent="MarginContainer/VBoxContainer/HBoxContainer/SeedPanel/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 132.0
margin_bottom = 260.0
mouse_filter = 2
crop_id = 3

[node name="ToolPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 696.0
margin_right = 696.0
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanel"]
size_flags_horizontal = 5

[node name="InventoryTool" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanel/HBoxContainer" instance=ExtResource( 2 )]
visible = false
tool_id = 1

[node name="InventoryTool2" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanel/HBoxContainer" instance=ExtResource( 2 )]
visible = false
tool_id = 2

[node name="InventoryTool3" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanel/HBoxContainer" instance=ExtResource( 2 )]
visible = false
tool_id = 3

[node name="InventoryTool4" parent="MarginContainer/VBoxContainer/HBoxContainer/ToolPanel/HBoxContainer" instance=ExtResource( 2 )]
visible = false
tool_id = 4

[node name="CustomerWindow" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1264.0
margin_right = 1264.0
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CustomerWindow"]

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 478.0
margin_top = 656.0
margin_right = 786.0
margin_bottom = 704.0
size_flags_horizontal = 4

[node name="ActiveToolIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
expand = true
stretch_mode = 6
script = ExtResource( 5 )

[node name="WordEntry" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
margin_left = 52.0
margin_right = 308.0
margin_bottom = 48.0
rect_min_size = Vector2( 256, 36 )

[node name="TitleLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -12.0
margin_right = 71.0
margin_bottom = 12.0
text = "Zenless Garden"

[node name="TutSeed1" type="Label" parent="."]
margin_left = 164.0
margin_top = 64.0
margin_right = 161.0
margin_bottom = 51.0
text = "Type the word
to select the tool."

[node name="TutSeed2" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -80.0
margin_right = 71.0
margin_bottom = 12.0
text = "Type the word
to apply to the soil."

[node name="TutSeed3" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -525.0
margin_top = 150.0
margin_bottom = 51.0
text = "Pay attention to
incoming plant requests!"

[node name="GameOverPanel" parent="." instance=ExtResource( 6 )]
pause_mode = 2
visible = false
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0

[node name="Tween" type="Tween" parent="."]
